@@ -1,3 +1,4 @@
  * New, more secure database creation workflow
  * Add alias for history files (WARNING: history is erased)
  * New Biometric unlock (Fingerprint with new API)
+ * Fix small issues
